<resources>
  <string name="app_name">Zoo</string>

  <string-array name="tab_titles">
    <item>Animals</item>
    <item>Keepers</item>
    <item>Pens</item>
    <item>Species</item>
  </string-array>

  <string name="type_unknown">😈</string>

  <string name="save_btn">Save</string>
  <string name="form_select_environment">Environment</string>
  <string name="form_space_requirements">Space</string>
  <string name="form_air_req">Air in m³</string>
  <string name="form_water_req">Water in m³</string>
  <string name="form_land_req">Land in m²</string>

  <string name="animal_title">Animal name: %1$s</string>
  <string name="animal_subtitle">Species: %1$s (%2$s)</string>
  <string name="animal_form_name_hint">Animal name</string>
  <string name="animal_form_select_species_btn">👾 Tap to select a species</string>

  <string name="keeper_title">Keeper\'s name: %1$s</string>
  <string name="keeper_subtitle">In charge of %1$d pens</string>
  <string name="keeper_form_name_hint">Keeper name</string>

  <string name="pen_title">Type: %1$s — ID: %2$d</string>
  <string name="pen_subtitle">Animals: %1$d</string>

  <string name="species_title">Species name: %1$s (%2$s)</string>
  <string name="species_subtitle">Animal count: %1$d</string>
  <string-array name="species_form_steps">
    <item>Environment</item>
    <item>Space requirements</item>
    <item>Name</item>
  </string-array>
  <string name="species_form_name_hint">Species name</string>
  <string name="species_form_emoji_hint">Species emoji</string>
  <string name="environment_air">Air</string>
  <string name="environment_dry">Dry</string>
  <string name="environment_water">Water</string>
  <string name="environment_hybrid">Hybrid</string>
  <string name="animal_assign_pen">Assign pen</string>
  <string name="no_pen_assigned">Warning! No pen assigned</string>
  <string name="pen_assigned">Pen ID: %1$d — Keeper: %2$s</string>
  <string name="no_keeper_assigned">Warning! No keeper assigned</string>
  <string name="keeper_assigned">Keeper: %1$s</string>
  <string name="pen_assign_keeper">Assign keeper</string>
  <string name="weather_text">Status: %1$s — Temp: %2$.2f°C</string>
  <string name="pettable_checkbox">Petting?</string>

  <string name="allocate_animals_warning">⚠️ Assigned all possible animals, not enough room for all.</string>
  <string name="allocate_animals_success">✅ Assigned all animals.</string>
  <string name="allocate_animals_failure">💥 Uh-oh something went wrong.</string>
  <string name="allocate_keepers_done">✅ Assigned keepers.</string>
  <string name="allocate_failure">💥 Uh-oh something went wrong.</string>
</resources>
